add correction to di_container